1.5

Added inheritance support (Guillaume Sauthier)
Added support for commands (e.g. "main add --author=cbeust Foo.java")
Added support for converters for main parameters (e.g. List<HostPort>).

1.4
2010/08/28

Added string converter factories
Added IDefaultProvider
Added PropertyFileDefaultProvider
Usage is now showing required parameters and default value
Support for values that look like parameters ("-integer -3", "/file /tmp/a")
Added @Parameters(optionPrefixes) to allow for different prefixes than "-"

1.2
2010/08/25

Usage is now aligned and alphabetically sorted
Added the hidden attribute
Added support for different separators than " " (e.g. "=").
Deprecated @ResourceBundle, replaced with @Parameters

1.1
2010/08/15

Better internationalization
Password support
Type converters
